# connectinno-case-study

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  alembic.ini  conftest.py  coverage.ini  docker-compose.override.yml  docker-compose.yml  pyproject.toml  pytest.ini  ruff.toml  uvicorn-logging-config.json
connectinno/: bootstrap.py
connectinno/adapters/: image_repository.py  transformation_repository.py
connectinno/app/: cv.py  messagebus.py  unit_of_work.py
connectinno/di/: __init__.py  celery.py  faststream.py  keys.py
connectinno/di/providers/: factory.py  firebase.py  messagebus.py  proxy.py  (+4 more)
connectinno/entrypoints/: asgi.py  stream.py  worker.py
connectinno/ports/: notifier.py  repository.py
connectinno/proxy/: __init__.py
corelib/: broker.py  cache.py  cloud.py  constants.py  functional.py  functools.py  patterns.py  recase.py  storage.py  tasks.py  timezone.py
corelib/celery/: backends.py  bootsteps.py  config.py  result.py  task.py
corelib/web/: config.py  constants.py  content_type.py  logger.py  patches.py  utils.py
docker/: Dockerfile-flower  Dockerfile-nginx  beat-entrypoint.sh  celery-worker-entrypoint.sh  entrypoint.sh  nginx-create-user.sh  nginx-evaluate-template.sh  postgres-add-normal-user.sh  python-worker-entrypoint.sh  web-entrypoint.sh
docker/js/: 01-init-privileges.js
domain/: __init__.py
domain/aggregates/: image.py
domain/commands/: base.py  transform_image.py  union.py
domain/entities/: __init__.py  image.py  transformation.py  user.py
domain/events/: base.py  union.py
domain/notifications/: base.py  union.py
domain/value_objects/: transformation_stat.py  transformation_type.py
fileslib/: fs_factory.py  io.py  registry.py  storage_service_proxy.py
migrations/: env.py
migrations/versions/: a23ef2a71df2_initial_schema.py
(+39 files in other folders)
